# web-bot-auth

./: Cargo.toml  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: pullrequest.yml
crates/: LICENSE  README.md
crates/src/: components.rs
crates/web-bot-auth/: Cargo.toml  README.md
crates/web-bot-auth/src/: components.rs  lib.rs
examples/: signing.rs  verify_arbitrary.rs
examples/browser-extension/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
examples/browser-extension/config/chromium/: com.google.Chrome.managed.plist  policy.json  update.xml
examples/browser-extension/platform/mv3/chromium/: manifest.json
examples/browser-extension/policy/: com.google.Chrome.managed.plist.templ  policy.json.templ
examples/browser-extension/scripts/: build_web_artifacts.mjs
examples/browser-extension/src/: background.ts
examples/caddy-plugin/: Caddyfile  README.md  go.mod  go.sum  handler.go  httpsig.go
examples/rfc9421-keys/: ed25519.json  rsapss.json  rsapss.pub.pem
examples/rust/: Cargo.toml  README.md  signing.rs  verify.rs  verify_arbitrary.rs
examples/verification-workers/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
examples/verification-workers/src/: html.ts  index.ts
examples/verification-workers/test/: index.spec.ts
