[workspace]
members = [
    "crates/*",
    "examples/rust"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
    "Akshat Mahajan <akshat@cloudflare.com>",
    "Gauri Baraskar <gbaraskar@cloudflare.com>",
    "Armando Faz <armfazh@cloudflare.com>",
    "Thibault Meunier <thibault@cloudflare.com>"
]
edition = "2024"
readme = "README.md"
homepage = "https://github.com/cloudflare/web-bot-auth"
repository = "https://github.com/cloudflare/web-bot-auth"
keywords = ["web-bot-auth", "http-message-signatures", "rfc9421", "cryptography"]
categories = ["cryptography"]
license = "Apache-2.0"

[workspace.dependencies]
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
indexmap = "^2"
sfv = "0.13.0"

# workspace dependencies
web-bot-auth = { version = "0.1", path = "./crates/web-bot-auth" }
